crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_trait_indent_where.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
MISSING TRAIT WHERE

  × I was parsing a trait declaration, but I got stuck here:
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add `where` after the trait parameters and superclass constraints, before the
        method declarations.
