crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_trait_method_name.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "trait Eq 'a where\n    1 : int"
---
nash::syntax

  × Expected an indented method signature.
   ╭─[src/Main.nash:2:5]
 1 │ trait Eq 'a where
 2 │     1 : int
   ·     ─
   ╰────
  help: Write `method : Type`.
