crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_trait_param.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
nash::syntax

  × Expected a type parameter.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Use a quoted name such as `'a`, or a bounded parameter such as `('a :
        Storable)`.
