crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_trait_space.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "trait\tEq 'a where"
---
nash::syntax

  × Tabs are not allowed.
   ╭─[src/Main.nash:1:6]
 1 │ trait   Eq 'a where
   ·      ───
   ╰────
  help: Replace the tab with spaces.
