crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_trait_super.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "trait 1 => Ord 'a where"
---
nash::syntax

  × Expected a type in the superclass constraint.
   ╭─[src/Main.nash:1:7]
 1 │ trait 1 => Ord 'a where
   ·       ─
   ╰────
  help: Write a trait name followed by its type arguments.
