crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_trait_super_arg.snap
---
source: crates/nash-report/src/syntax/variants.rs
description: "trait Eq 1 => Ord 'a where"
---
nash::syntax

  × Superclass argument must be a trait parameter.
   ╭─[src/Main.nash:1:10]
 1 │ trait Eq 1 => Ord 'a where
   ·          ─
   ╰────
  help: Use one of this trait's quoted type parameters.
