crates/nash-report/src/syntax/snapshots/nash_report__syntax__variants__variant_trait_where.snap
---
source: crates/nash-report/src/syntax/variants.rs
expression: "render_plain(&report, &source, \"src/Main.nash\")"
---
  × Expected `where` before the trait methods.
   ╭─[src/Main.nash:1:3]
 1 │ f = value
   ·   ─
   ╰────
  help: Add `where` after the trait parameters and constraints.
